Basic Introduction and skills added to the template of my portfolio

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- Put your site title here -->
   <title>
-    Syed Ali Hussnain | A Web Developer based in Lahore, Pakistan.
+     Mukul Gupta | Portfolio
   </title>
 
   <meta name="description" content="Add small description of yourslef.">
@@ -42,7 +42,7 @@
       <nav class="nav" role="navigation">
         <ul class="nav__items">
           <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
-          <li class="nav__item"><a href="#clients" class="nav__link">Clients</a></li>
+          <li class="nav__item"><a href="#Skills" class="nav__link">Skills</a></li>
           <li class="nav__item">
             <a href="#about" class="nav__link">About</a>
           </li>
@@ -56,10 +56,10 @@
       <div class="header__text">
         <h1 class="heading-primary">
           <!-- Replace the following name with your name -->
-          <span>Syed Ali Hussnain</span>
+          <span>Mukul Gupta</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>A Web Developer based in Lahore, Pakistan.</p>
+        <p>3rd year Computer science student @ IIIT Banglore</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
@@ -162,19 +162,19 @@
       </div>
     </section>
 
-    <!-- ***** Clients ***** -->
+    <!-- ***** Skills ***** -->
 
-    <section class="client" id="clients">
+    <section class="client" id="Skills">
       <div class="row">
-        <h2>Clients</h2>
+        <h2>Skills</h2>
         <div class="client__logos">
-          <!-- Add logos of the clients or companies you'have worked with. -->
-          <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />
-          <img src="./images/goldengrid.png" class="client__logo" alt="Company 3" />
-          <img src="./images/bullseye.png" class="client__logo" alt="Company 1" />
-          <img src="./images/mighty-furnitures.png" class="client__logo" alt="Company 1" />
-          <img src="./images/fastlane.png" class="client__logo" alt="Company 3" />
-          <img src="./images/chippy.png" class="client__logo" alt="Company 1" />
+          <!-- logos for the skills -->
+          <img src="./images/java.jpeg" class="client__logo" alt="Company 2" />
+          <img src="./images/C++.png" class="client__logo" alt="Company 3" />
+          <img src="./images/python.png" class="client__logo" alt="Company 1" />
+          <img src="./images/sql.jpeg" class="client__logo" alt="Company 1" />
+          <img src="./images/html.png" class="client__logo" alt="Company 3" />
+          <img src="./images/css.png" class="client__logo" alt="Company 1" />
         </div>
       </div>
     </section>
