Added one more skill(machine learning)

--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
           <img src="./images/sql.jpeg" class="client__logo" alt="Company 1" />
           <img src="./images/html.png" class="client__logo" alt="Company 3" />
           <img src="./images/css.png" class="client__logo" alt="Company 1" />
+          <img src="./images/ml.jpeg" class="client__logo" alt="Company 1" />
         </div>
       </div>
     </section>
